<resources>
    <string name="app_name">CheerMum</string>
    <string name="Welcome">Welcome to CheerMum!</string>
    <string name="Home_desc">Here you can find all of the settings available to you.</string>
    <string name="Title_description">Cheermum Logo and Title</string>

    <!--Buttons-->
    <string name="wifi_config">Configure Wifi</string>
    <string name="suggestion_config">Settings</string>

    <!--Text Wifi Config-->
    <string name="Wifi_Welcome">Before your Bear can connect to your phone. It needs to connect to your local network.
        \nPlug your phone into your Bear and enter you wifi name and password to begin.</string>
    <string name="uuid">Wifi uuid</string>
    <string name="password">Wifi password</string>
    <!--Buttons-->
    <string name="Home">Go Home</string>
    <string name="submit">Send</string>

    <!--Text Settings Config-->
    <string name="Settings_tutorial">Configure All your settings here!</string>
    <string name="Suggestion_Welcome">Configure your bears suggestions to your hearts desire!</string>
    <string name="YogaSuggestMessage">Yoga Suggestion Message</string>
    <string name="OutsideSuggestionMessage">Go Outside Suggestion Message</string>

    <!--Suggestion switches-->
    <string name="Sadness_detection">Sadness Detection</string>
    <string name="Anger_detection">Anger Detection</string>
    <string name="Happy_detection">Happiness Detection</string>

    <string name="WhaleSong">Whales</string>
    <string name="Violins">Violins</string>
    <string name="Bus">Bus</string>

    <!--Buttons-->
    <string name="save">Save</string>

</resources>