<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/cheerMum_blue">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/Title_description"
        android:src="@drawable/cheermum_logo_cropped"
        app:srcCompat="@drawable/cheermum_logo_cropped" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/cheerMum_pink"
        android:text="@string/Wifi_Welcome"
        android:textAppearance="@style/TextAppearance.Compat.Notification.Title"
        android:textSize="22sp"/>

    <TextView
        android:id="@+id/uuidView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/uuid" />

    <EditText
        android:id="@+id/WifiName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:inputType="text"
        android:autofillHints="username"
        android:labelFor="@id/Submit_wifi"/>

    <Button
        android:id="@+id/Submit_wifi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:backgroundTint="@color/cheerMum_yellow"
        android:textColor="@color/black"
        android:text="@string/save" />

    <Button
        android:id="@+id/Go_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:backgroundTint="@color/cheerMum_yellow"
        android:textColor="@color/black"
        android:text="@string/Home" />
</LinearLayout>